entries of a file.  On GNU/Linux, the POSIX ACL interface is used via
libacl.  On MS-Windows, the NT Security APIs are used to emulate the
POSIX ACL interfaces.

* Editing Changes in Emacs 24.4

** New commands `toggle-frame-fullscreen' and `toggle-frame-maximized',
bound to <f11> and M-<f10>, respectively.


* Changes in Specialized Modes and Packages in Emacs 24.4

** completing-read-multiple's separator can now be a regexp.
The default separator is changed to allow surrounding spaces around the comma.

** Battery

*** Battery information via the BSD `apm' utility is now supported.

** cl-lib

*** New macro cl-tagbody.

+++
*** letf is now just an alias for cl-letf.

** Calc

*** Calc by default now uses the Gregorian calendar for all dates, and
uses January 1, 1 AD as its day number 1.  Previously Calc used the
Julian calendar for dates before September 14, 1752, and it used
December 31, 1 BC as its day number 1; the new scheme is more
consistent with Calendar's calendrical system and day numbering.

*** The new variable `calc-gregorian-switch' lets you configure the
date when Calc switches from the Julian to the Gregorian calendar.
Nil, the default value, means to always use the Gregorian calendar.
The value (YEAR MONTH DAY) means to start using the Gregorian calendar
on the given date.

** ERC

*** New option `erc-accidental-paste-threshold-seconds'.
If set to a number, this can be used to avoid accidentally paste large
amounts of data into the ERC input.

** Icomplete is a bit more like IDO.
*** key bindings to navigate through and select the completions.
*** The icomplete-separator is customizable, and its default has changed.
*** Removed icomplete-show-key-bindings.

** Isearch

*** `C-x 8 RET' in Isearch mode reads a character by its Unicode name
and adds it to the search string.

** MH-E has been updated to MH-E version 8.4.
See MH-E-NEWS for details.

---
** The unrmail command converts from BABYL to mboxrd rather than mboxo.