@@ -1,3 +1,13 @@
+2013-01-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* jit-lock.el (jit-lock-debug-mode): New minor mode.
+	(jit-lock--debug-fontifying): New var.
+	(jit-lock--debug-fontify): New function.
+	* subr.el (condition-case-unless-debug): Don't prevent catching the
+	error, just let the debbugger run.
+	* emacs-lisp/timer.el (timer-event-handler): Don't prevent debugging
+	timer code and don't drop errors silently.
+
 2013-01-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* autorevert.el (auto-revert-notify-watch-descriptor): Give it
